--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,16 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+/* styles/globals.css */
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 15s linear infinite; /* Sesuaikan durasi sesuai keinginan Anda */
+}
